tests/compile_fail/modules/dup_import_mod.olrn
pub fn value() -> i64
{
    ret 1
}
